--- a/react-app/src/components/Posts/Feed/Feed.css
+++ b/react-app/src/components/Posts/Feed/Feed.css
@@ -13,6 +13,9 @@ z#root {
   margin-top: 1rem;
 }
 
+.loading {
+  margin-top: 25rem;
+}
 
 .post {
   background-color: #fff;
